[package]
name = "ignisq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["tokio"] }
axum-server = "0.8.0"
chrono = { version = "0.4.43", features = ["serde"] }
colored = "3.1.1"
dotenv = "0.15.0"
futures = "0.3.31"
hyper-util = "0.1.20"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4"] }
yup-oauth2 = "12.1.2"
